--- a/src/mdSample/css/_commoncss/router.styl
+++ b/src/mdSample/css/_commoncss/router.styl
@@ -57,7 +57,7 @@
     .router-item
       box-sizing border-box
       padding 0 2rem
-      width 720px
+      width 80%
       height 100%
       margin 0 auto
       .page
