--- a/src/mdSample/css/_commonx/config/icon.styl
+++ b/src/mdSample/css/_commonx/config/icon.styl
@@ -1,12 +1,12 @@
 //input 
 // 下拉
-$inputSelect = '\e64e'
+$inputSelect = '\e74e'
 // 日期
 $inputDate = '\e7bc'
 //加减号
 $inputAddIconL = '\e7ac'
-$inputAddIcon = '\e7a2a'
-$inputMinusIcon = '\e7ba'
+$inputAddIcon = '\e611'
+$inputMinusIcon = '\e602'
 //radio checkbox
 $radio = '\e7bf'
 $radioChecked = '\e7c0'
@@ -28,7 +28,7 @@ $icon-fail = '\e7b8'
 $icon-sucess = '\e7b7'
 
 //关闭 大
-$icon-del = '\e7a7'
+$icon-del = '\e607'
 //关闭 小
 $icon-del-s = '\e7ab'
 
