--- a/src/mdSample/css/_commonx/css/flex.styl
+++ b/src/mdSample/css/_commonx/css/flex.styl
@@ -39,6 +39,8 @@ ss-display-flex-x('.flex-row-wrap', row wrap)
 // .flex-column-between-center
 //   ss-display-flex(column, space-between, center)
 
+.justify-between
+  justify-content: space-between
 .al-item
   align-items: flex-start
 .al-item-center
