--- a/src/mdSample/css/_commonx/cssFunc/pages/routerconfig/routerStyle.styl
+++ b/src/mdSample/css/_commonx/cssFunc/pages/routerconfig/routerStyle.styl
@@ -6,7 +6,8 @@ rootHeadCfg = {
   $HeaderBg: #333
   $HeadColor: #fff
   $HeadSize: 12px
-  $mWidth: 180px
+  $mWidth: 260px
+  $logoWidth: 18%      //logo大小
   //缩小版
   $min-width: 70px
   $lh: 50px
@@ -14,11 +15,13 @@ rootHeadCfg = {
 
 admin = {
   $scrollBox: true
-  $routerBg: $color-bg
+  $routerBg: #fff
   $box-line: false
   $br: $br-lg
   $mBg: #fff,
-  $space: 30px
+  $mBg2: #333,
+  $mColor:#fff,
+  $space: false
   $boxSpace: 30px
   $mWidth: false
   $min-width: 80px        //缩小版
@@ -29,9 +32,10 @@ adminMenus = {
   $iconName: '\e605'
   $menusType: 1,
   $logoColor: $color-text-title,
-  $mBg: #333,
-  $mColor:#999,
-  $mWidth: 180px,
+  $mBg: #333
+  $mColor:#fff
+  $width: 18%
+  $mWidth: 430px
   $mActiveBg: #262626,
   $mActiveItemBg: false, //fade-out($color-primary, .9)
   $mActiveColor: #fff,
@@ -50,6 +54,8 @@ adminMenus = {
   $spaceItem: 45px,
   $mLine: false,
   $spaceCaption: false,
+  $cursor: pointer
+  $color: #fff
 
   $min-width: 70px,
   $lh-2: 50px
