--- a/src/mdSample/css/index.styl
+++ b/src/mdSample/css/index.styl
@@ -1,56 +1,5 @@
-@import "./_commoncss/router";
-active-color = #3eaf7c
 
-a
-  color: #666;
-  text-decoration: none;
-  outline: none;
-
-.nav-header
-  width: 100%;
-  display: flex;
-  .hbody
-    display flex
-    margin-left 16rem
-    .hb-item
-      margin-right 1rem
-      line-height 2
-      &.active
-        border-bottom: 2px solid #46bd87;
-
-.router-container
-  // height auto
-  img[alt=xquery]
-    width 300px
-  .router-menus
-    padding-left 1rem
-    box-shadow: -4px -4px 8px #9da5ab;
-    &:before
-      content: ''
-      display block
-      width 90%
-      height 8rem
-      box-sizing border-box
-      border 1px solid #dfdfdf
-      margin 0 auto
-      margin-top 1.6rem
-      margin-bottom 1.6rem
-    .item
-      cursor: pointer;
-      box-sizing: border-box;
-      padding-left: 2rem;
-      color: #2c3e50;
-      line-height: 2;
-      &.active
-        color: active-color
-      &:hover
-        color: active-color
-    .item.menu-caption
-      transition: color .15s ease;
-      font-size: 1.1em;
-      font-weight: 700;
-      padding-left 1rem
-      padding-top: 1rem
-      padding-bottom: 0.5rem
-      &:first-child
-        padding-top: 0
+@import './_commonx/config/theme/orange'    //系统主题
+@import './_commonx/config/codetheme/black'  //代码块模版
+@import './_commonx/cssFunc/pages/routerconfig/routerStyle2'        //左边菜单列表模板
+@import './_commondoc'                      //各系统公用部分
