--- a/src/mdSample/css/_commonx/cssFunc/pages/routerconfig/routerStyle3.styl
+++ b/src/mdSample/css/_commonx/cssFunc/pages/routerconfig/routerStyle3.styl
@@ -1,58 +1,62 @@
-// 类似传统后台，灰色背景
+// 类似ele，白色主题
 rootHeadCfg = {
   // $bgimage: '/images/saui-logo.png'
   $bgimage: false
-  $HeaderHeight: 60px   
-  $logoWidth: 180px      //logo大小
+  $HeaderHeight: 100%
   $HeaderBg: #fff
-  $HeadColor: $color-text
+  $HeadColor: #333
   $HeadSize: 12px
+  $mWidth: 260px
+  $logoWidth: 18%      //logo大小
   //缩小版
-  $logoWidth-2: 80px
+  $min-width: 70px
   $lh: 50px
 }
 
 admin = {
-  $scrollBox: false
-  $routerBg: false
-  $box-line: false
-  $br: $br-lg
-  $mBg: #fff,
-  $space: 30px
-  $boxSpace: 0
+  $scrollBox: true
+  $routerBg: #fff
+  $box-line: 1px solid $color-line
+  $br: 0
+  $mBg: #fff
+  $mColor: #666
+  $space: 0
+  $boxSpace: var(--space, $space)
   $mWidth: false
   $min-width: 80px        //缩小版
   $min-titleShow: true
 }
 
 adminMenus = {
-  $iconName: false
-  $size: 14px,
-  $space-b: 11px 0,
-  $br: $br-lg,
-  $bs: $box-shadow,
-  $mBg: #fff,
-  $mColor:$color-text,
-  $mWidth: false,
-  $mActiveBg: $color-aux-warning,
-  $mActiveItemBg: false, //fade-out($color-primary, .9)
-  $mActiveColor: $color-primary,
-  $mUlBg: #fff,
-  $lh: 32px,
-  $lh-title: 20px,
-  $type: 'activeline',
-  $typeClass: '.caption',
-  $isShowIcon: column,          //是否显示标题带icon
-  $isShowIconRight: false,
-  $isAllShow: false,          //是否全部展示 
-  $isClick: false
-  $typeleft: true,
-  $size-title: false,
-  $space: 11px 0,
-  $spaceItem: 25px,
-  $mLine: false,
-  $spaceCaption: false,
+  $iconName: '\e605'
+  $menusType: 1
+  $logoColor: $color-text-title
+  $mBg: #fff
+  $mColor: #666
+  $bs: none
+  $width: 18%
+  $mWidth: 430px
+  $mActiveBg: $color-primary
+  $mActiveItemBg: false
+  $mActiveColor: $color-primary
+  $mUlBg: #fff
+  $lh: 40px
+  $lh-title: 34px
+  $type: false
+  $typeClass: '.li-item'
+  $isShowIcon: false
+  $isShowIconRight: true
+  $isAllShow: true
+  $typeleft: left
+  $isClick: true
+  $size-title: 12px
+  $space: 0 2em
+  $spaceItem: 2em
+  $mLine: 1px solid $color-line
+  $spaceCaption: 16px 0 
+  $cursor: false
+  $color: $color-text-title
 
-  $min-width: 80px,
+  $min-width: 70px
   $lh-2: 50px
 }
